--- a/README.adoc
+++ b/README.adoc
@@ -5,6 +5,7 @@
 :branch: master
 :twitter-handle: j2r2b
 :license: http://www.apache.org/licenses/LICENSE-2.0
+:license-name: Apache 2.0 License
 
 :repository: {gh-repo-owner}/{gh-repo-name}
 :homepage: https://{gh-repo-owner}.github.io/{gh-repo-name}
@@ -38,5 +39,5 @@ You can also contact me on Twitter: link:https://twitter.com/{twitter-handle}[@{
 //tag::license-section[]
 == License
 
-link:{license}[Apache 2.0 License]
+link:{license}[{license-name}]
 //end::license-section[]
